Fixed GeneralComponent Test and refactored portions of code for readability

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -51,7 +51,7 @@ body {
         border-bottom: 0;
     }
 
-    .postTextBox {
+    .postTextArea {
         margin-top: 15px;
         font-size: 20px;
     }
